WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244911
Page numbers not printed when using WKWebView
https://bugs.webkit.org/show_bug.cgi?id=244911
Summary
Page numbers not printed when using WKWebView
Richard Robinson
Reported
2022-09-07 15:17:56 PDT
rdar://85438043
Attachments
Add attachment
proposed patch, testcase, etc.
Richard Robinson
Comment 1
2022-09-07 15:30:34 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/4111
EWS
Comment 2
2022-09-12 10:39:26 PDT
Committed
254392@main
(2b0e8042741b): <
https://commits.webkit.org/254392@main
> Reviewed commits have been landed. Closing PR #4111 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug