Page numbers not printed when using WKWebView. https://bugs.webkit.org/show_bug.cgi?id=244911 rdar://85438043

Reviewed by Tim Horton.

In AppKit, there is an API method `drawPageBorderWithSize:` that can be
overriden to be used to arbitrarily draw contents on a page's border. In
legacy WebKit, this method was called when printing. However, in WKWebView,
the behavior differs because this method is no longer called.

This PR resolves this discrepency by ensuring this method does get called
and so the behavior remains consistent with how it works with legacy web
views.

* Source/WebKit/UIProcess/PageClient.h:
(WebKit::PageClient::drawPageBorderForPrinting):
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::drawPageBorderForPrinting):
* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/UIProcess/mac/PageClientImplMac.h:
* Source/WebKit/UIProcess/mac/PageClientImplMac.mm:
(WebKit::PageClientImpl::drawPageBorderForPrinting):
* Source/WebKit/UIProcess/mac/WKPrintingView.mm:
(-[WKPrintingView drawPageBorderWithSize:]):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WKPrinting.mm:
(-[WKPrintPageBordersWebView drawPageBorderWithSize:]):
(-[WKPrintPageBordersWebView _waitUntilPrintingDone]):
(-[PrintPageBordersUIDelegate _webView:printFrame:pdfFirstPageSize:completionHandler:]):
(TEST):
(-[PrintUIDelegate callBlockAsync:]): Deleted.
(-[PrintUIDelegate _webView:printFrame:pdfFirstPageSize:completionHandler:]): Deleted.
(-[PrintUIDelegate waitForPagination]): Deleted.

Canonical link: https://commits.webkit.org/254392@main